--- a/styles.css
+++ b/styles.css
@@ -45,11 +45,19 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%; 
-    top: 10%;
+    height: 95%; 
+    top: 8%;
   }
   .container img {
     max-width: 100%; /* Ensure the image doesn't exceed the container's width */
     max-height: 100%; /* Ensure the image doesn't exceed the container's height */
   }
-  
+  section{
+    margin-top: 10%;
+    padding: 20%;
+    text-align: center;
+  }
+  #about-us{
+    border-radius: 10%;
+    background-color: #fff;
+  }
