--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: #fff;
+    background-image: url('underwater.gif');
+    background-size: cover; /* Cover the entire body */
+    background-repeat: repeat;
   }
   header {
     position: fixed;
@@ -11,7 +13,7 @@ body, html {
     width: 100%;
     background-color: blue;
     color: white;
-    padding: 20px;
+    padding: 15px;
     text-align: center;
     display: flex;
     justify-content: space-between;
@@ -49,7 +51,7 @@ body, html {
     align-items: center; 
   }
   .container{
-    margin-top: 10%;
+    margin-top: 7%;
     height: 90%;
     width: 80%; 
     display: flex;
@@ -90,30 +92,115 @@ body, html {
     width: 100%; 
     height: auto; 
   }
+  /* Hide the modal by default */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: transparent; /* Transparent background */
   
-  .zoom-controls {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-  }
-  
-  .zoom-controls button {
-    position: relative;
-    padding: 5px 10px;
-    margin-right: 10px;
-    right: 70%;
-  }
-  #zoom-in{
-    font-size: 200%;
-  }
-  #zoom-out{
-    font-size: 200%;
-  }
-  section{
-    margin-top: 10%;
-    padding: 20%;
-    text-align: center;
-  }
-  #about-us{
-    background-color: #fff;
-  }
+}
+#text-yilan{
+  text-align: center;
+  z-index: 1;
+}
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* Adjust the margin as desired */
+  padding: 5%; /* Increase padding for more space */
+  border: 1cap solid #888;
+  width: 60%; /* Set the width of the modal */
+  max-width: 50%; /* Set the maximum width of the modal */
+  max-height: 80%; /* Set the maximum height of the modal */
+  overflow: auto; /* Enable scrolling if content overflows */
+  display: flex;
+  justify-content: space-between;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: -5%; /* Adjust vertical position */
+  margin-left: -5%; /* Adjust horizontal position */
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.yilan-container{
+  position: relative;
+  height: 100%;
+  width: 40%;
+}
+.inmodal-image{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+/* ... (other styles remain the same) */
+
+.side-content {
+  float: right;
+  width: 40%; /* Adjust width as needed */
+  padding: 20px;
+}
+
+.info {
+  padding: 10px;
+  text-align: center;
+}
+
+.info h2 {
+  text-align: center;
+  margin-top: 0;
+}
+
+.info div {
+  margin-bottom: 10px;
+}
+
+.info span {
+  display: inline-block;
+  width: 150px;
+  font-weight: bold;
+}
+
+.zoom-controls {
+  position: absolute;
+  width: 10%;
+  bottom: 10px;
+  right: 10px;
+}
+
+.zoom-controls button {
+  height: 10%;
+  width: 40%;
+  position: relative;
+  margin-right: 10px;
+  right: 70%;
+}
+#zoom-in{
+  font-size: 200%;
+}
+#zoom-out{
+  font-size: 200%;
+}
+section{
+  margin-top: 10%;
+  padding: 20%;
+  text-align: center;
+}
+#about-us{
+  background-color: #fff;
+}
