--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body, html {
     padding: 0;
     height: 100%;
     background-image: url('underwater.gif');
-    background-size: cover; /* Cover the entire body */
+    background-size: cover; 
     background-repeat: repeat;
   }
   header {
@@ -92,7 +92,7 @@ body, html {
     width: 100%; 
     height: auto; 
   }
-  /* Hide the modal by default */
+  
 .modal {
   display: none;
   position: fixed;
@@ -102,7 +102,7 @@ body, html {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: transparent; /* Transparent background */
+  background-color: transparent; 
   
 }
 #text-yilan{
@@ -111,13 +111,13 @@ body, html {
 }
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* Adjust the margin as desired */
-  padding: 5%; /* Increase padding for more space */
+  margin: 15% auto;
+  padding: 5%; 
   border: 1cap solid #888;
-  width: 60%; /* Set the width of the modal */
-  max-width: 50%; /* Set the maximum width of the modal */
-  max-height: 80%; /* Set the maximum height of the modal */
-  overflow: auto; /* Enable scrolling if content overflows */
+  width: 60%;
+  max-width: 50%; 
+  max-height: 80%;
+  overflow: auto; 
   display: flex;
   justify-content: space-between;
 }
@@ -128,8 +128,8 @@ body, html {
   font-size: 28px;
   font-weight: bold;
   cursor: pointer;
-  margin-top: -5%; /* Adjust vertical position */
-  margin-left: -5%; /* Adjust horizontal position */
+  margin-top: -5%; 
+  margin-left: -5%; 
 }
 
 .close:hover,
@@ -148,11 +148,11 @@ body, html {
   height: 100%;
   width: 100%;
 }
-/* ... (other styles remain the same) */
+
 
 .side-content {
   float: right;
-  width: 40%; /* Adjust width as needed */
+  width: 40%; 
   padding: 20px;
 }
 
